--- a/client/app/views/multi-player/multi-player.html
+++ b/client/app/views/multi-player/multi-player.html
@@ -1,1 +1,3 @@
-todo
+<div class="text-center" style="padding-top: 1em; padding-bottom: 1em">
+<a href="#!/" class="btn btn-danger" translate="BACK_MENU"></a>
+</div>
