--- a/client/app/views/settings/settings.html
+++ b/client/app/views/settings/settings.html
@@ -1,3 +1,3 @@
-<div class="text-center" style="padding-top: 1em">
-<a href="#!/" class="btn btn-danger">Go back</a>
+<div class="text-center" style="padding-top: 1em; padding-bottom: 1em">
+<a href="#!/" class="btn btn-danger" translate="BACK_MENU"></a>
 </div>
