--- a/client/app/components/app-content/mute-button/mute-button.html
+++ b/client/app/components/app-content/mute-button/mute-button.html
@@ -1,4 +1,4 @@
-<a href class="btn btn-default btn-danger" ng-click="$ctrl.toggleMute()" style="font-size: larger">
+<a href class="btn btn-default btn-danger title-bar-button" ng-click="$ctrl.toggleMute()">
 	<i ng-if="$ctrl.muted" class="glyphicon glyphicon-volume-off"></i>
 	<i ng-if="!$ctrl.muted" class="glyphicon glyphicon-volume-up"></i>
 </a>
