Added game states module. Added some entities into play state (Map, Brick, Grass etc). Added loop into play state to fetch Map data Removed sidebar-navbar. Resized game to match full free space on screen (under topbar) Added single-player module to handle game creating for 1 user. Added middleware mock API

--- a/client/src/app/components/menu/menu.html
+++ b/client/src/app/components/menu/menu.html
@@ -7,7 +7,7 @@
 		</li>
 
 		<li>
-			<a ui-sref="single">
+			<a ui-sref="single-player">
 				<i class="mdi mdi-account mdi-24px"></i>
 				{{'SINGLE' | translate}}
 				<i class="mdi mdi-account mdi-24px"></i>
