--- a/client/src/sass/_vendors.scss
+++ b/client/src/sass/_vendors.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/bootstrap-css-only/css/bootstrap";
 @import "../../node_modules/mdi/css/materialdesignicons";
+@import "../../node_modules/ui-select/dist/select";
 
 /* latin */
 @font-face {
