--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,9 +1,4 @@
 <div class="root">
 	<topbar></topbar>
-	<div class="container-fluid">
-		<div class="row">
-			<sidebar></sidebar>
-			<main></main>
-		</div>
-	</div>
+	<div class="root-view" ui-view></div>
 </div>
