--- a/client/src/app/common/topbar/topbar.html
+++ b/client/src/app/common/topbar/topbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-fixed-top topbar">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -13,7 +13,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a>
 					<i class="mdi mdi-account-star mdi-24px"></i>
-					Welcome, Anonymous!
+					Welcome, Guest!
 				</a></li>
 			</ul>
 		</div>
