--- a/client/src/sass/_common.scss
+++ b/client/src/sass/_common.scss
@@ -1,44 +1,4 @@
-@import "common/sidebar";
-@import "common/topbar";
-
-
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: $topbar-bgcolor ;
-  }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-}
-
-/*
+	/*
  * Top navigation
  * Hide default border to remove 1px line.
  */
@@ -50,17 +10,15 @@ span.navbar-brand {
 	color: $brand-color !important;
 }
 
+.topbar {
+  background-color: rgb(51, 51, 51);
+}
 
 .main {
-  padding: 20px;
   color: white;
 }
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
+
+.root-view {
+	height: 100%;
+	margin-top: 55px;
 }
