--- a/client/src/app/components/menu/menu.html
+++ b/client/src/app/components/menu/menu.html
@@ -7,9 +7,9 @@
 		</li>
 
 		<li>
-			<a ui-sref="single-player">
+			<a ui-sref="newGame">
 				<i class="mdi mdi-account mdi-24px"></i>
-				{{'SINGLE' | translate}}
+				New game
 				<i class="mdi mdi-account mdi-24px"></i>
 			</a>
 		</li>
